# aoc

./: .gitignore  LICENSE  template.py
2015/1/: solve.py
2015/10/: solve.py
2015/12/: solve.py
2015/13/: solve.py
2015/14/: solve.py
2015/15/: solve.py
2015/16/: solve.py
2015/17/: solve.py
2015/18/: solve.py
2015/19/: input.txt  solve.py
2015/2/: solve.py
2015/20/: solve.py
2015/21/: solve.py
2015/22/: solve.py
2015/23/: solve.py
2015/24/: solve.py
2015/25/: solve.py
2015/3/: solve.py
2015/4/: solve.py
2015/5/: solve.py
2015/6/: solve.py
2015/7/: solve.py
2015/8/: solve.py
2015/9/: solve.py
2016/1/: solve.py
2016/10/: debug.py  output.txt  solve.py
2016/11/: solve.py
2016/13/: solve.py
2016/14/: solve.py
2016/15/: solve.py
2016/16/: solve.py
2016/17/: solve.py
2016/18/: solve.py
2016/19/: solve.py
2016/2/: solve.py
2016/22/: solve.py
2016/23/: solve.py
2016/4/: solve.py
2016/5/: solve.py
2016/6/: solve.py
2016/7/: solve.py
2016/8/: solve.py
2016/9/: solve.py
2017/01/: solve.py
2017/02/: solve.py
2017/03/: solve.py
2017/04/: solve.py
2017/05/: solve.py
2017/06/: solve.py
2017/07/: solve.py
2017/08/: solve.py
2017/09/: solve.py
2017/10/: solve.py
2017/11/: solve.py
2017/12/: solve.py
2017/13/: solve.py  solve2.py
2017/14/: solve.py
2017/15/: solve.py
2020/1/: solve.py  (+1 more)
3/: solve.py
rust2023/: Cargo.toml  template.rs
rust2023/src/: aoc.rs
rust2024/: Cargo.toml
rust2024/src/: aoc.rs  direction.rs  graph.rs  grid.rs  lib.rs  pos.rs
rust2025/: Cargo.toml
(+222 files in other folders)
