[package]
name = "rust2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"

[[bin]]
name = "template"

[lib]
name = "aoc"
path = "src/aoc.rs"
crate-type = ["lib"]

[dependencies]
regex = "1.11.1"
